--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Welcome to the OpenBTS source code.
+Welcome to the `OpenBTS` source code.
 
 
 For free support, please subscribe to openbts-discuss@lists.sourceforge.net.
